refactor: Prepare for i18n and translate components title

--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,7 +1,7 @@
 <div class="center">
-  <h2>Page detail</h2>
+  <h2 i18n>Page detail</h2>
   <a routerLink="">retour</a>
-  <p>details works!</p>
+  <p i18n>details works!</p>
   <span>{{ olympicCountry.id }}</span>
   <span>{{ olympicCountry.country }}</span>
   <ul *ngFor="let participation of participations">
