--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<h2>Olympic games app</h2>
-<button (click)="reloadResults()">Reload Countries</button>
+<h2 i18n>Olympic games app</h2>
+<button (click)="reloadResults()" i18n>Reload Countries</button>
 <hr />
 <!-- <div *ngFor="let countryStat of olympicCountries">
   <span>ID&nbsp;<span>{{ countryStat.id }}</span></span><br>
