--- a/src/sass/grid.scss
+++ b/src/sass/grid.scss
@@ -66,34 +66,47 @@ body {
   width: vars.$width;
 }
 
-.col-1-sm { width: math.div(vars.$width, 12) - math.div(vars.$gutter * 11, 12); }
-.col-2-sm { width: math.div(vars.$width, 6) - math.div(vars.$gutter * 10, 12); }
-.col-3-sm { width: math.div(vars.$width, 4) - math.div(vars.$gutter * 9, 12); }
-.col-4-sm { width: math.div(vars.$width, 3) - math.div(vars.$gutter * 8, 12); }
-.col-5-sm { width: math.div(vars.$width, math.div(12, 5)) - math.div(vars.$gutter * 7, 12); }
-.col-6-sm { width: math.div(vars.$width, 2) - math.div(vars.$gutter * 6, 12); }
-.col-7-sm { width: math.div(vars.$width, math.div(12, 7)) - math.div(vars.$gutter * 5, 12); }
-.col-8-sm { width: math.div(vars.$width, math.div(12, 8)) - math.div(vars.$gutter * 4, 12); }
-.col-9-sm { width: math.div(vars.$width, math.div(12, 9)) - math.div(vars.$gutter * 3, 12); }
-.col-10-sm { width: math.div(vars.$width, math.div(12, 10)) - math.div(vars.$gutter * 2, 12); }
-.col-11-sm { width: math.div(vars.$width, math.div(12, 11)) - math.div(vars.$gutter * 1, 12); }
-.col-12-sm { width: vars.$width; }
+@media only screen and (min-width: vars.$breakpoint-small) {
+  .col-sm-1 { width: math.div(vars.$width, 12) - math.div(vars.$gutter * 11, 12); }
+  .col-sm-2 { width: math.div(vars.$width, 6) - math.div(vars.$gutter * 10, 12); }
+  .col-sm-3 { width: math.div(vars.$width, 4) - math.div(vars.$gutter * 9, 12); }
+  .col-sm-4 { width: math.div(vars.$width, 3) - math.div(vars.$gutter * 8, 12); }
+  .col-sm-5 { width: math.div(vars.$width, math.div(12, 5)) - math.div(vars.$gutter * 7, 12); }
+  .col-sm-6 { width: math.div(vars.$width, 2) - math.div(vars.$gutter * 6, 12); }
+  .col-sm-7 { width: math.div(vars.$width, math.div(12, 7)) - math.div(vars.$gutter * 5, 12); }
+  .col-sm-8 { width: math.div(vars.$width, math.div(12, 8)) - math.div(vars.$gutter * 4, 12); }
+  .col-sm-9 { width: math.div(vars.$width, math.div(12, 9)) - math.div(vars.$gutter * 3, 12); }
+  .col-sm-10 { width: math.div(vars.$width, math.div(12, 10)) - math.div(vars.$gutter * 2, 12); }
+  .col-sm-11 { width: math.div(vars.$width, math.div(12, 11)) - math.div(vars.$gutter * 1, 12); }
+  .col-sm-12 { width: vars.$width; }
+}
 
 @media only screen and (min-width: vars.$breakpoint-med) {
-  .col-1 { width: math.div(vars.$width, 12) - math.div(vars.$gutter * 11, 12); }
-  .col-2 { width: math.div(vars.$width, 6) - math.div(vars.$gutter * 10, 12); }
-  .col-3 { width: math.div(vars.$width, 4) - math.div(vars.$gutter * 9, 12); }
-  .col-4 { width: math.div(vars.$width, 3) - math.div(vars.$gutter * 8, 12); }
-  .col-5 { width: math.div(vars.$width, math.div(12, 5)) - math.div(vars.$gutter * 7, 12); }
-  .col-6 { width: math.div(vars.$width, 2) - math.div(vars.$gutter * 6, 12); }
-  .col-7 { width: math.div(vars.$width, math.div(12, 7)) - math.div(vars.$gutter * 5, 12); }
-  .col-8 { width: math.div(vars.$width, math.div(12, 8)) - math.div(vars.$gutter * 4, 12); }
-  .col-9 { width: math.div(vars.$width, math.div(12, 9)) - math.div(vars.$gutter * 3, 12); }
-  .col-10 { width: math.div(vars.$width, math.div(12, 10)) - math.div(vars.$gutter * 2, 12); }
-  .col-11 { width: math.div(vars.$width, math.div(12, 11)) - math.div(vars.$gutter * 1, 12); }
-  .col-12 { width: vars.$width; }
+  .col-md-1 { width: math.div(vars.$width, 12) - math.div(vars.$gutter * 11, 12); }
+  .col-md-2 { width: math.div(vars.$width, 6) - math.div(vars.$gutter * 10, 12); }
+  .col-md-3 { width: math.div(vars.$width, 4) - math.div(vars.$gutter * 9, 12); }
+  .col-md-4 { width: math.div(vars.$width, 3) - math.div(vars.$gutter * 8, 12); }
+  .col-md-5 { width: math.div(vars.$width, math.div(12, 5)) - math.div(vars.$gutter * 7, 12); }
+  .col-md-6 { width: math.div(vars.$width, 2) - math.div(vars.$gutter * 6, 12); }
+  .col-md-7 { width: math.div(vars.$width, math.div(12, 7)) - math.div(vars.$gutter * 5, 12); }
+  .col-md-8 { width: math.div(vars.$width, math.div(12, 8)) - math.div(vars.$gutter * 4, 12); }
+  .col-md-9 { width: math.div(vars.$width, math.div(12, 9)) - math.div(vars.$gutter * 3, 12); }
+  .col-md-10 { width: math.div(vars.$width, math.div(12, 10)) - math.div(vars.$gutter * 2, 12); }
+  .col-md-11 { width: math.div(vars.$width, math.div(12, 11)) - math.div(vars.$gutter * 1, 12); }
+  .col-md-12 { width: vars.$width; }
+}
 
-  .hidden-sm {
-    display: block;
-  }
+@media only screen and (min-width: vars.$breakpoint-large) {
+  .col-lg-1 { width: math.div(vars.$width, 12) - math.div(vars.$gutter * 11, 12); }
+  .col-lg-2 { width: math.div(vars.$width, 6) - math.div(vars.$gutter * 10, 12); }
+  .col-lg-3 { width: math.div(vars.$width, 4) - math.div(vars.$gutter * 9, 12); }
+  .col-lg-4 { width: math.div(vars.$width, 3) - math.div(vars.$gutter * 8, 12); }
+  .col-lg-5 { width: math.div(vars.$width, math.div(12, 5)) - math.div(vars.$gutter * 7, 12); }
+  .col-lg-6 { width: math.div(vars.$width, 2) - math.div(vars.$gutter * 6, 12); }
+  .col-lg-7 { width: math.div(vars.$width, math.div(12, 7)) - math.div(vars.$gutter * 5, 12); }
+  .col-lg-8 { width: math.div(vars.$width, math.div(12, 8)) - math.div(vars.$gutter * 4, 12); }
+  .col-lg-9 { width: math.div(vars.$width, math.div(12, 9)) - math.div(vars.$gutter * 3, 12); }
+  .col-lg-10 { width: math.div(vars.$width, math.div(12, 10)) - math.div(vars.$gutter * 2, 12); }
+  .col-lg-11 { width: math.div(vars.$width, math.div(12, 11)) - math.div(vars.$gutter * 1, 12); }
+  .col-lg-12 { width: vars.$width; }
 }
