--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -1,4 +1,5 @@
-@use "reset";
-@use "titles";
-@use "grid";
-@use "spacing";
+@use 'reset';
+@use 'titles';
+@use 'grid';
+@use 'spacing';
+@use 'fonts';
