--- a/src/vars.scss
+++ b/src/vars.scss
@@ -1,23 +1,23 @@
-// Colors
+/* Colors */
 $purple: #8a4d76;
 $pink: #fa7c91;
 $brown: #757763;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
 
-// Fonts
+/* Fonts */
 $default-font-family: 'Roboto', 'Helvetica', sans-serif;
 $title-font-family: 'Roboto', 'Helvetica', sans-serif;
 
-// Grid
+/* Grid */
 $width: 96%;
 $gutter: 4%;
-$breakpoint-small: 33.75em; // 540px
-$breakpoint-med: 45em; // 720px
-$breakpoint-large: 60em; // 960px
+$breakpoint-small: 33.75em; /*  540px */
+$breakpoint-med: 45em; /* 720px */
+$breakpoint-large: 60em; /* 960px */
 
-// Layout
+/* Layout */
 $header-height: 7rem;
 
-// VARS
+/* VARS */
 $title-color: $purple;
