--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -1,8 +1,16 @@
-.center {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.chart-fact {
+  min-height: 5rem;
+  padding: 1rem;
+  border: 0.2rem solid var(--sl-color-success-600);
+  border-radius: 1rem;
+  text-align: center;
+
+  h3 {
+    font-size: var(--sl-font-size-medium);
+  }
+
+  span {
+    font-size: var(--sl-font-size-large);
+    font-weight: var(--sl-font-weight-bold);
+  }
 }
