--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,27 +1,33 @@
-<div class="center">
-  <h1>{{ olympicCountry.country | titlecase }}</h1>
-  <a routerLink="">retour</a>
-
-  <dl>
-    <dt i18n>{{ 'Number of entries' }}</dt>
-    <dd>{{ participations.length }}</dd>
-    <dt i18n>{{ 'Total number medals' }}</dt>
-    <dd>{{ getTotalMedals() }}</dd>
-    <dt i18n>{{ 'Total number of athletes' }}</dt>
-    <dd>{{ getTotalAthtletes() }}</dd>
-  </dl>
-
-  <p i18n>details works!</p>
-  <span>{{ olympicCountry.id }}</span>
-  <span>{{ olympicCountry.country }}</span>
-  <ul *ngFor="let participation of participations">
-    <li><span>Id&nbsp;<span>{{ participation.id }}</span></span></li>
-    <li><span>City&nbsp;<span>{{ participation.city }}</span></span></li>
-    <li><span>Nb atheletes&nbsp;<span>{{ participation.athleteCount }}</span></span></li>
-    <li><span>Year&nbsp;<span>{{ participation.year }}</span></span></li>
-    <li><span>Nb medals&nbsp;<span>{{ participation.medalsCount }}</span></span></li>
-  </ul>
+<div class="container">
+  <div class="row mb-5">
+    <div class="col-12">
+      <h1>{{ olympicCountry.country | titlecase }}</h1>
+      <a routerLink="">retour</a>
+    </div>
+  </div>
+  <div class="row mb-5">
+    <div class="col-12 col-md-4">
+      <div class="chart-fact">
+        <h3 i18n>{{ 'Number of entries' }}</h3>
+        <span>{{ participations.length }}</span>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="chart-fact">
+        <h3 i18n>{{ 'Total number medals' }}</h3>
+        <span>{{ getTotalMedals() }}</span>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="chart-fact">
+        <h3 i18n>{{ 'Total number of athletes' }}</h3>
+        <span>{{ getTotalAthtletes() }}</span>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <app-olympic-country-line-chart [participations]="participations" />
+    </div>
+  </div>
 </div>
-<hr />
-
-<app-olympic-country-line-chart [participations]="participations" />
