--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid">
+<div class="container chart-container">
   <div class="row">
     <div class="col-12">
       <app-olympic-pie-chart [olympicCountries]="olympicCountries" (selected)="onSelectAnOlympicCountryStats($event)" />
