--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-12">
       <h1 i18n>Olympic games app</h1>
+      <sl-button *ngIf="canTryToReloadData" (click)="onTryToReload()">Try to reload</sl-button>
     </div>
   </div>
 </div>
