Fixed Apex chart

--- a/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
+++ b/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
@@ -7,6 +7,7 @@
 </div>
 <!--noformat-->
 <apx-chart
+  ngModel #chart
   class="olympic-pie-chart"
   [chart]="chartOptions.chart"
   [colors]="chartOptions.colors"
