Fixed line chart

--- a/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.html
+++ b/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.html
@@ -1,7 +1,9 @@
 <!--noformat-->
 <apx-chart
+  ngModel #chart
   [chart]="chartOptions.chart"
   [colors]="chartOptions.colors"
+  [dataLabels]="chartOptions.dataLabels"
   [grid]="chartOptions.grid"
   [labels]="chartOptions.labels"
   [legend]="chartOptions.legend"
@@ -12,3 +14,4 @@
   [xaxis]="chartOptions.xaxis"
   [yaxis]="chartOptions.yaxis"
 />
+<!--noformat-->
