olympic bar chart change medal font size

--- a/src/app/components/olympic-bar-chart/olympic-bar-chart.component.scss
+++ b/src/app/components/olympic-bar-chart/olympic-bar-chart.component.scss
@@ -4,3 +4,9 @@
   display: flex;
   justify-content: center;
 }
+
+.yaxis-country-label {
+  > tspan:nth-child(2) {
+    font-size: 0.85em !important;
+  }
+}
