--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1 i18n="The app title">Olympic games app</h1>
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
