--- a/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
+++ b/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
@@ -1,8 +1,8 @@
 <div class="center-toolbar">
   <sl-button-group>
-    <sl-button (click)="onSortCountriesByMedals()">Sort by medals</sl-button>
-    <sl-button (click)="onZoomIn();$event.stopPropagation();">Zoom In</sl-button>
-    <sl-button (click)="onZoomOut();$event.stopPropagation();">Zoom Out</sl-button>
+    <sl-button class="teal" (click)="onSortCountriesByMedals()">Sort by medals</sl-button>
+    <sl-button class="teal" (click)="onZoomIn();$event.stopPropagation();">Zoom In</sl-button>
+    <sl-button class="teal" (click)="onZoomOut();$event.stopPropagation();">Zoom Out</sl-button>
   </sl-button-group>
 </div>
 <!--noformat-->
@@ -18,6 +18,7 @@
   [plotOptions]="chartOptions.plotOptions"
   [series]="chartOptions.series"
   [responsive]="chartOptions.responsive"
+  [tooltip]="chartOptions.tooltip"
   [yaxis]="chartOptions.yaxis"
 />
 <!--noformat-->
