--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,24 +1,24 @@
 <div class="container">
-  <div class="row mb-5">
-    <div class="col-12">
-      <h1>{{ olympicCountry.country | titlecase }}</h1>
-      <a routerLink="">retour</a>
+  <div class="row">
+    <div class="col-12 title-col mb-8">
+      <sl-button class="teal action-button ms-md-8" routerLink="" i18n>Back</sl-button>
+      <h2 class="p-4 mx-auto">{{ olympicCountry.country | titlecase }}</h2>
     </div>
   </div>
   <div class="row mb-5">
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-4 flex-middle">
       <div class="chart-fact">
         <h3 i18n>{{ 'Number of entries' }}</h3>
         <span>{{ participations.length }}</span>
       </div>
     </div>
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-4 flex-middle">
       <div class="chart-fact">
         <h3 i18n>{{ 'Total number medals' }}</h3>
         <span>{{ getTotalMedals() }}</span>
       </div>
     </div>
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-4 flex-middle">
       <div class="chart-fact">
         <h3 i18n>{{ 'Total number of athletes' }}</h3>
         <span>{{ getTotalAthtletes() }}</span>
