--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -1,16 +1,48 @@
-.chart-fact {
-  min-height: 5rem;
-  padding: 1rem;
-  border: 0.2rem solid var(--sl-color-success-600);
-  border-radius: 1rem;
-  text-align: center;
+@use 'vars' as vars;
+@use 'sass/partials/chart-facts';
+@use 'sass/partials/teal-button';
 
-  h3 {
-    font-size: var(--sl-font-size-medium);
+.action-button {
+  width: fit-content;
+
+  @media screen and (min-width: vars.$breakpoint-md) {
+    position: absolute;
+    left: 0;
+  }
+}
+
+.title-col {
+  display: flex;
+  flex-flow: column-reverse;
+  align-items: center;
+  justify-content: center;
+
+  > h2 {
+    width: fit-content;
+    border-radius: var(--sl-border-radius-x-large);
+    background-color: var(--sl-color-teal-700);
+    color: var(--sl-color-neutral-0);
+
+    @media screen and (min-width: vars.$breakpoint-md) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.flex-middle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: vars.$breakpoint-md) {
+    justify-content: end;
+
+    &:nth-child(2) {
+      justify-content: start;
+    }
   }
 
-  span {
-    font-size: var(--sl-font-size-large);
-    font-weight: var(--sl-font-weight-bold);
+  .chart-fact {
+    min-width: 14rem;
   }
 }
