--- a/src/vars.scss
+++ b/src/vars.scss
@@ -12,9 +12,9 @@ $title-font-family: 'Roboto', 'Helvetica', sans-serif;
 /* Grid */
 $width: 96%;
 $gutter: 4%;
-$breakpoint-small: 33.75em; /*  540px */
-$breakpoint-med: 45em; /* 720px */
-$breakpoint-large: 60em; /* 960px */
+$breakpoint-sm: 33.75em; /*  540px */
+$breakpoint-md: 45em; /* 720px */
+$breakpoint-lg: 60em; /* 960px */
 
 /* Layout */
 $header-height: 7rem;
