refactor: Bar chart component refactor

--- a/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
+++ b/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
@@ -7,18 +7,16 @@
 </div>
 <!--noformat-->
 <apx-chart
-  ngModel #chart
+  ngModel #chartComponent
   class="olympic-pie-chart"
-  [chart]="chartOptions.chart"
-  [colors]="chartOptions.colors"
-  [dataLabels]="chartOptions.dataLabels"
-  [noData]="chartOptions.noData"
-  [labels]="chartOptions.labels"
-  [legend]="chartOptions.legend"
-  [plotOptions]="chartOptions.plotOptions"
-  [series]="chartOptions.series"
-  [responsive]="chartOptions.responsive"
-  [tooltip]="chartOptions.tooltip"
-  [yaxis]="chartOptions.yaxis"
+  [chart]="chart"
+  [dataLabels]="dataLabels"
+  [labels]="labels"
+  [legend]="legend"
+  [plotOptions]="plotOptions"
+  [series]="series"
+  [responsive]="responsive"
+  [tooltip]="tooltip"
+  [yaxis]="yaxis"
 />
 <!--noformat-->
