refactor: country line component

--- a/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.html
+++ b/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.html
@@ -1,17 +1,15 @@
 <!--noformat-->
 <apx-chart
-  ngModel #chart
-  [chart]="chartOptions.chart"
-  [colors]="chartOptions.colors"
-  [dataLabels]="chartOptions.dataLabels"
-  [grid]="chartOptions.grid"
-  [labels]="chartOptions.labels"
-  [legend]="chartOptions.legend"
-  [series]="chartOptions.series"
-  [stroke]="chartOptions.stroke"
-  [title]="chartOptions.title"
-  [tooltip]="chartOptions.tooltip"
-  [xaxis]="chartOptions.xaxis"
-  [yaxis]="chartOptions.yaxis"
+  ngModel #chartComponent
+  [chart]="chart"
+  [dataLabels]="dataLabels"
+  [grid]="grid"
+  [labels]="labels"
+  [legend]="legend"
+  [series]="series"
+  [stroke]="stroke"
+  [tooltip]="tooltip"
+  [yaxis]="yaxis"
+  [xaxis]="xaxis"
 />
 <!--noformat-->
