--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container chart-container">
   <div class="row">
     <div class="col-12 title-col mb-8">
       <sl-button class="teal action-button ms-md-8" routerLink="" i18n>Back</sl-button>
