--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
     <div class="col-12 col-md-6 flex-middle">
       <div class="chart-fact me-md-6">
         <h3 i18n>Number of JOs</h3>
-        <span>2</span>
+        <span>{{ numberOfJOs }}</span>
       </div>
     </div>
     <div class="col-12 col-md-6 flex-middle">
