refactor: :lipstick: line chart Ux add color and tooltip customisation

--- a/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.html
+++ b/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.html
@@ -2,6 +2,7 @@
 <apx-chart
   ngModel #chartComponent
   [chart]="chart"
+  [colors]="colors"
   [dataLabels]="dataLabels"
   [grid]="grid"
   [labels]="labels"
