--- a/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.scss
+++ b/src/app/components/olympic-country-line-chart/olympic-country-line-chart.component.scss
@@ -2,3 +2,23 @@
   background-color: #0ff !important;
   color: #f00 !important;
 }
+
+/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
+::ng-deep .apexcharts-tooltip {
+  overflow: initial !important;
+  height: fit-content;
+  padding: 0;
+  border: 0 !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+  transform: translateX(1rem);
+
+  .olympic-tooltip {
+    display: block;
+    flex-direction: column;
+    padding: var(--sl-spacing-medium) var(--sl-spacing-x-large);
+    border-radius: var(--sl-border-radius-x-large) !important;
+    background-color: var(--sl-color-teal-700);
+    color: var(--sl-color-neutral-0);
+  }
+}
