--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1 i18n="The app title">Olympic games app</h1>
+      <h1 class="app-title" i18n="The app title">Olympic games app</h1>
     </div>
   </div>
 </div>
