refactor: :truck: Rename PieChart to BarChart

--- a/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
+++ b/src/app/components/olympic-bar-chart/olympic-bar-chart.component.html
@@ -8,7 +8,7 @@
 <!--noformat-->
 <apx-chart
   ngModel #chartComponent
-  class="olympic-pie-chart"
+  class="olympic-bar-chart"
   [chart]="chart"
   [dataLabels]="dataLabels"
   [labels]="labels"
