--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <app-olympic-pie-chart ngModel #olympicPieChart [olympicCountries]="olympicCountries"
+      <app-olympic-bar-chart ngModel #olympicBarChart [olympicCountries]="olympicCountries"
         (selected)="onSelectAnOlympicCountryStats($event)" />
     </div>
   </div>
