feat: :lipstick: Enhance 404 page style

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <div class="center">
   <h2 i18n>No corresponding page found</h2>
-  <a routerLink="" i18n>Go back</a>
+  <sl-button class="teal action-button" routerLink="" i18n>Go back</sl-button>
 </div>
