--- a/src/app/pages/not-found/not-found.component.scss
+++ b/src/app/pages/not-found/not-found.component.scss
@@ -1,3 +1,5 @@
+@use 'sass/partials/teal-button';
+
 .center {
   display: flex;
   width: 100vw;
@@ -5,4 +7,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
+}
+
+h2 {
+  color: var(--sl-color-teal-700);
 }
